--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ input[type="text"]:invalid {
 }
 
 .companies img{
-    width: 150px;
+    width: 150px !important;
 }
 
 .customers-box {
@@ -487,5 +487,45 @@ input[type="text"]:invalid {
 }
 
 .page-footer__social li:last-child {
+    margin: 0;
+}
+
+.dots-customer {
+    padding: 65px 0 30px 0;
+    justify-content: center;
+}
+
+.dots-works {
+    margin-right: 70px;
+    padding: 20px 0 70px 0;
+    justify-content: center;
+}
+
+.owl-dot {
+    cursor: pointer;
+    background: 0;
+    border: 0;
+    outline: 0;
+    margin-right: 15px;
+}
+
+.owl-dot span {
+    display: block;
+    width: 12px;
+    height: 12px;
+    background-color: #d1d1d1;
+    border-radius: 50%;
+}
+
+.owl-dot:hover span {
+    cursor: pointer;
+    background-color: #dfdfdf;
+}
+
+.owl-dot.active span {
+    background-color: #17C671 !important;
+}
+
+.owl-dot:last-child {
     margin: 0;
 }
