--- a/css/style.css
+++ b/css/style.css
@@ -158,18 +158,18 @@ input[type="text"]:invalid {
     text-decoration: underline;
 }
 
-.page-header {
-    padding: 16px 0;
-}
-
 .page-header__logo {
     height: 47px;
     width: 254px;
 }
 
+nav {
+    width: 100%;
+}
+
 .page-header__nav {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     text-transform: uppercase;
     font-size: 0.7rem;
     font-weight: 900;
@@ -181,10 +181,12 @@ input[type="text"]:invalid {
 }
 
 .page-header__nav li {
-    margin: 0 0 0 58px;
+    position: relative;
 }
 
 .page-header__nav  a {
+    padding: 35px 0;
+    display: flex;
     color: #C1C1C3;
 }
 
@@ -193,7 +195,9 @@ input[type="text"]:invalid {
     color: #17C671;
 }
 
-.page-header__nav--contact a {
+.page-header__nav--contact {
+    display: block;
+    white-space: nowrap;
     color: #17C671;
     border: 2px solid #17C671;
     padding: 13px 16px;
@@ -201,10 +205,48 @@ input[type="text"]:invalid {
     transition: all 0.2s ease;
 }
 
-.page-header__nav--contact a:hover {
+.page-header__nav--contact:hover {
     color: #FFF;
     background-color: #17C671;
     box-shadow: 0 10px 30px 0 rgba(165,160,160,0.32);
+}
+
+.dropdown,
+.submenu {
+    position: absolute;
+    background-color: #fff;
+    border: 1px solid #909090;
+    z-index: 999;
+    padding: 0 0 15px 0;
+}
+
+.dropdown a,
+.submenu a {
+    padding: 15px 20px 0 20px;
+}
+
+.submenu {
+    top: -1px;
+    left: 100%;
+}
+
+.have-submenu::after,
+.have-dropdown::after  {
+    content: url(../svg/dropdown-arrow.svg);
+    margin-left: 10px; 
+}
+
+.have-submenu::after {
+    transform: rotate(270deg);
+}
+
+.have-submenu-open::after {
+    transform: rotate(90deg);
+}
+
+.have-submenu-open,
+.have-dropdown-open {
+    color: #17C671 !important;
 }
 
 .hero-img {
