--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,7 @@ nav {
 .absolute-img {
     position: absolute;
     right: 0;
-    top: -50px;
+    top: -100px;
 }
 
 .works-item {
@@ -593,6 +593,11 @@ nav {
     margin-right: 70px;
     padding: 20px 0 70px 0;
     justify-content: center;
+}
+
+.owl-stage {
+    display: flex;
+    align-items: center;
 }
 
 .owl-dot {
@@ -879,11 +884,11 @@ nav {
     }
 }
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
     .absolute-img {
         width: 200px;
     }
-}
+} */
 
 @media (min-width: 768px) and (max-width: 991px) {
 
