--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,10 @@ input[type="text"]:invalid {
     box-shadow: 0 10px 30px 0 rgba(165,160,160,0.32);
 }
 
+.btn-margin-right {
+    margin-right: 30px; 
+}
+
 .top-bar {
     border-bottom: 1px solid #E9E9E9;
 }
@@ -165,6 +169,10 @@ input[type="text"]:invalid {
 .page-header__logo {
     height: 47px;
     width: 254px;
+}
+
+.page-header__video {
+    padding-left: 40px;
 }
 
 nav {
@@ -841,6 +849,15 @@ nav {
 
     .hide-lrg {
         display: none !important;
+    }
+
+    .page-header__video {
+        padding: 0 15px;
+        margin: 40px 0 0 0;
+    }
+
+    .medium-center-text {
+        text-align: center;
     }
 
     .flex-column {
