--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ a {
     text-decoration: none;
 }
 
+img {
+    vertical-align: middle;
+}
+
 h1 {
     margin: 0;
     font-size: 3rem;
@@ -173,6 +177,10 @@ input[type="text"]:invalid {
 
 .page-header__video {
     padding-left: 40px;
+}
+
+.page-header__video .video-container {
+    box-shadow: 0px 0px 45px 0px rgba(0,0,0,0.5);
 }
 
 nav {
